# binary_builder

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/mqh/: binary_builder.hpp
include/mqh/detail/: is_builder.hpp  stl_serializable.hpp
include/mqh/object/: builder_impl.hpp  serializable.hpp
